# inwestycje

./: .gitignore  README.md
app/: Dockerfile  README.md  cmaes.ipynb  ea.ipynb  features_analysis.ipynb  features_generator.py  ga_setup.py  main.py  more_features.ipynb  preprocessing.py  pyproject.toml  results.ipynb  setup.py  storage_utils.ipynb  storage_utils.py  strategy_visualizer.py  visualize.ipynb
app/.ipynb_checkpoints/: visualize-checkpoint.ipynb
app/data/: wig_d.csv
app/local/: best_possible.ipynb  cmaes.ipynb  more_features.ipynb  pyproject.toml  results.ipynb  setup.py  storage_utils.ipynb  storage_utils.py  strategy_visualizer.py
app/local/data/: pkn_d_unknown.csv  wig_d_unknown.csv
app/local/storage/: cmaes_summary.csv  ea_summary.csv
app/remote/: Dockerfile  preprocessing.py  pyproject.toml  run.sh  run1.sh  run_cmaes.py  setup.py  storage_utils.py  wig_d.csv
app/remote/data/: pkn_d.csv
app/storage/cmaes_2024-05-06_01-58-26-889867/: features.csv
app/storage/cmaes_2024-05-06_03-43-19-855095/: logbook.csv
app/storage/cmaes_2024-05-06_04-12-06-134046/: logbook.csv
app/storage/cmaes_2024-05-06_05-02-44-009272/: features.csv
app/storage/cmaes_2024-05-06_05-43-34-827691/: features.csv  logbook.csv
app/storage/cmaes_2024-05-06_07-14-52-494578/: features.csv  logbook.csv
app/storage/cmaes_2024-05-06_07-58-39-723589/: features.csv  logbook.csv
app/storage/cmaes_2024-05-06_08-12-59-316446/: logbook.csv
app/storage/cmaes_2024-05-06_08-33-39-846672/: logbook.csv
app/storage/cmaes_2024-05-06_08-47-52-266764/: features.csv
(+603 files in other folders)
