[tool.poetry]
name = "inwestycje"
version = "0.1.0"
description = ""
authors = ["dariusz.piwowarski <d.piwowarski.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
deap = "^1.4.1"
ta = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
