[tool.poetry]
name = "inwestycje"
version = "0.1.0"
description = ""
authors = ["dariusz.piwowarski <d.piwowarski.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
deap = "^1.4.1"
ta = "^0.11.0"
tabulate = "^0.9.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
